runtime_error.txt
warning: unused imports: `ComponentData`, `FieldValue`, `SceneEntityData`, `SceneMetadata`, and `SceneSerializer`
 --> engine-core\src\scene_manager.rs:2:20
  |
2 | ...::{ComponentData, FieldValue, SceneData, SceneEntityData, SceneId, SceneMetadata, SceneSerializer};
  |       ^^^^^^^^^^^^^  ^^^^^^^^^^             ^^^^^^^^^^^^^^^           ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `ln`
   --> engine-core\src\scene.rs:174:25
    |
174 | ...et ln = se...
    |       ^^ help: if this is intentional, prefix it with an underscore: `_ln`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `engine-core` (lib) generated 2 warnings (run `cargo fix --lib -p engine-core` to apply 2 suggestions)
warning: field `stack` is never read
  --> engine-scripting\src\vm.rs:12:5
   |
11 | pub struct VirtualMachine {
   |            -------------- field in this struct
12 |     stack: Vec<f64>,
   |     ^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: error finalizing incremental compilation session directory `\\?\C:\Users\legac\Downloads\Janus-main\Janus-main\oss-game-engine\target\debug\incremental\engine_physics-1hsri4aqcn7fr\s-hgu8b2jnyx-0wxy4i2-working`: Access is denied. (os error 5)

warning: `engine-scripting` (lib) generated 1 warning
warning: `engine-physics` (lib) generated 1 warning
warning: unused variable: `data`
   --> engine-assets\src\lib.rs:247:25
    |
247 | ...me(data) =...
    |       ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `engine-assets` (lib) generated 1 warning (run `cargo fix --lib -p engine-assets` to apply 1 suggestion)
warning: field `incremental_cache` is never read
  --> engine-build\src\lib.rs:30:5
   |
29 | pub struct BuildSystem {
   |            ----------- field in this struct
30 |     incremental_cache: Ha...
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `engine-build` (lib) generated 1 warning
   Compiling engine-runtime v0.1.0 (C:\Users\legac\Downloads\Janus-main\Janus-main\oss-game-engine\engine-runtime)
error[E0432]: unresolved import `libloading`
  --> engine-runtime\src\lib.rs:16:9
   |
16 |     use libloading::{Library, Symbol};
   |         ^^^^^^^^^^ use of unresolved module or unlinked crate `libloading`
   |
   = help: if you wanted to use a crate named `libloading`, use `cargo add libloading` to add it to your `Cargo.toml`

error[E0425]: cannot find type `Path` in this scope
  --> engine-runtime\src\lib.rs:53:43
   |
53 |     pub fn load_plugin(&mut self, _path: &Path) {
   |                                           ^^^^ not found in this scope
   |
help: consider importing this struct
   |
 7 + use std::path::Path;
   |

error[E0282]: type annotations needed
  --> engine-runtime\src\lib.rs:21:51
   |
21 |             let lib = Library::new(path).map_err(|e| e.to_string())?;
   |                                                   ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
21 |             let lib = Library::new(path).map_err(|e: /* Type */| e.to_string())?;
   |                                                    ++++++++++++

error[E0282]: type annotations needed
  --> engine-runtime\src\lib.rs:23:53
   |
23 |                 lib.get(b"_plugin_create").map_err(|e| e.to_string())?;
   |                                                     ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
23 |                 lib.get(b"_plugin_create").map_err(|e: /* Type */| e.to_string())?;
   |                                                      ++++++++++++

error[E0405]: cannot find trait `Plugin` in this scope
  --> engine-runtime\src\lib.rs:94:10
   |
94 |     impl Plugin for TestPlugin {
   |          ^^^^^^ not found in this scope
   |
help: consider importing this trait
   |
89 +     use crate::Plugin;
   |

error[E0433]: failed to resolve: use of undeclared type `Engine`
   --> engine-runtime\src\lib.rs:101:26
    |
101 |         let mut engine = Engine::new();
    |                          ^^^^^^ use of undeclared type `Engine`
    |
help: consider importing this struct
    |
 89 +     use crate::Engine;
    |

Some errors have detailed explanations: E0282, E0425, E0432.
For more information about an error, try `rustc --explain E0282`.
Some errors have detailed explanations: E0405, E0425, E0433.
For more information about an error, try `rustc --explain E0405`.
error: could not compile `engine-runtime` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `engine-runtime` (lib test) due to 3 previous errors
